--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "4screens-angular-liveevent",
-  "version": "1.0.0",
+  "version": "0.1.13",
   "description": "Extension for Angular 4screens EngageForm",
   "main": "gulpfile.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/datMarcinuz/4screens-angular-liveevent.git"
+    "url": "git@github.com:4screens/angular-liveevent.git"
   },
   "author": "Marcin Marzewski @datMarcinuz <marcin.marzewski@nopattern.net>",
   "license": {
@@ -35,6 +35,7 @@
     "gulp-typescript": "^2.7.6",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
+    "gulp-wrapper": "^1.0.0",
     "jasmine": "^2.3.1",
     "karma": "^0.12.36",
     "karma-chrome-launcher": "^0.1.12",
