--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-typescript-preprocessor": "0.0.19",
+    "minimist": "^1.1.3",
     "phantomjs": "^1.9.17",
     "semver": "^4.3.6",
     "shelljs": "^0.5.1",
