--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-tslint": "^3.0.2-beta",
-    "gulp-typescript": "^2.7.6",
+    "gulp-tslint": "4.1.2",
+    "gulp-typescript": "2.10.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
     "gulp-wrapper": "^1.0.0",
@@ -50,6 +50,7 @@
     "semver": "^4.3.6",
     "shelljs": "^0.5.1",
     "tsd": "^0.6.1",
-    "typescript": "^1.5.0-beta"
+    "tslint": "^3.1.1",
+    "typescript": "1.7.3"
   }
 }
